# resume-parser

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  document_converter.py  errors.py  main.py  model_registry.py  ocr.py  parser_agent.py  schemas.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/specs/: resume-parser-project-spec.md
docs/superpowers/plans/: 2026-04-29-resume-parser-implementation.md
tests/: conftest.py  test_api.py  test_document_converter.py  test_model_registry.py  test_ocr.py  test_parser_agent.py  test_schemas.py
