[project]
name = "resume-parser"
version = "0.1.0"
description = "FastAPI resume parser using MarkItDown, Tesseract OCR, and Pydantic AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "markitdown[pdf,docx]>=0.1.5",
    "pillow>=10.4.0",
    "pydantic>=2.9.0",
    "pydantic-ai>=1.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pytesseract>=0.3.13",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
